finsihed SEXIT for 4a & 4b

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -366,12 +366,12 @@ Note that for experiments 3a, 3b, and 6b, the three-level model for reaction tim
 \hypertarget{testing-hypotheses}{%
 \subsubsection{Testing hypotheses}\label{testing-hypotheses}}
 
-To test hypotheses, we used the Sequential Effect eXistence and sIgnificance Testing (SEXIT) approach suggested by Makowski, Ben-Shachar, Chen, and Lüdecke (2019). In this approach, we directly use the posterior distributions of model parameters or other effect that can derived from posterior distributions. The SEXIT approach reports centrality, uncertainty, existence, significance, and size of the input posterior, which is intuitive for making statistical inference. We used \texttt{bayestestR} for implementing this approach (Makowski, Ben-Shachar, \& Lüdecke, 2019).
+To test hypotheses, we used the Sequential Effect eXistence and sIgnificance Testing (SEXIT) framework suggested by Makowski, Ben-Shachar, Chen, and Lüdecke (2019). In this approach, we directly use the posterior distributions of model parameters or other effect that can derived from posterior distributions. The SEXIT approach reports centrality, uncertainty, existence, significance, and size of the input posterior, which is intuitive for making statistical inference. We used \texttt{bayestestR} for implementing this approach (Makowski, Ben-Shachar, \& Lüdecke, 2019).
 
 \hypertarget{prioritization-of-moral-character}{%
 \paragraph{Prioritization of moral character}\label{prioritization-of-moral-character}}
 
-We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distributions of the good/bad character and the neutral character and tested with SEXIT approach.
+We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distributions of the good/bad character and the neutral character and tested the posteriors with the SEXIT approach. Following the SEXIT framework, we report the median of the posterior distribution and its 95\% CI (Highest Density Interval), along the probability of direction (pd), the probability of significance and the probability of being large. The thresholds beyond which the effect is considered as significant (i.e., non-negligible) and large are \textbar0.05\textbar{} and \textbar0.30\textbar.
 
 \hypertarget{modulation-of-self-referential-processing}{%
 \paragraph{Modulation of self-referential processing}\label{modulation-of-self-referential-processing}}
@@ -381,7 +381,7 @@ We tested the modulation effect of self-referential processing by examining the 
 \hypertarget{spontaneous-binding-between-the-self-and-good-character}{%
 \paragraph{Spontaneous binding between the self and good character}\label{spontaneous-binding-between-the-self-and-good-character}}
 
-For data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whether the good character is spontaneously bound with the self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words either facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions.
+For data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whether the good character is spontaneously bound with the self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing. More specifically, we tested the posteriors of \(good_{self} - neutral_{self}\) and \(good_{other} - neutral_{other}\), as well as the difference between them. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of \(good_{self} - good_{other}\), \(neutral_{self} - neutral_{other}\), and \(bad_{self} - bad_{other}\) as well as the difference between them.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -427,13 +427,13 @@ Experiments 4a and 4b were designed to test whether the good character and self-
 
 In experiment 4a, where ``self'' vs.~``other'' were task-relevant and moral character were task-irrelevant, we found the ``self'' conditions performed better than the ``other'' conditions for both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}), the difference (median = 0.08, 95\% HDI {[}-0.10, 0.27{]}) has a 81.60\% probability of being positive (\textgreater{} 0), 64.33\% of being significant (\textgreater{} 0.05). For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}), the difference (median = -0.09, 95\% CI {[}-0.25, 0.05{]}) has a 89.03\% probability of being negative (\textless{} 0), 71.38\% of being significant (\textless{} -0.05). The difference between theses two effects (median = 0.18, 95\% CI {[}-0.06, 0.43{]}) has a 92.88\% probability of being positive (\textgreater{} 0), 85.08\% of being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-exp4-all}.
 
-A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}629 667{]}) were inside. This effect was reversed for the ``other'' condition: RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) or bad character (median = 719, 95\% HDI {[}696 740{]}) inside.
+A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) were inside, the effect (median = -7.87, 95\% CI {[}-17.49, 2.00{]}) has a 94.55\% probability of being negative (\textless{} 0), 94.50\% of being significant (\textless{} -0.05), and 93.97\% of being large (\textless{} -0.30). In contrast, RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) inside, the effect (median = 11.64, 95\% CI {[}-3.99, 27.83{]}) has a 93.00\% probability of being positive (\textgreater{} 0), 92.83\% of being significant (\textgreater{} 0.05), and 92.40\% of being large (\textgreater{} 0.30). The difference between the effects (median = -19.46, 95\% CI {[}-42.93, 3.72{]}) has a 94.90\% probability of being negative (\textless{} 0), 94.88\% of being significant (\textless{} -0.05), and 94.58\% of being large (\textless{} -0.30).
 
 In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 
-Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% HDI {[}-0.07 0.32{]}), but this effect did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-0.13, 0.21{]}) or ``bad'' person (\(mean_{diff}\) = -0.05, 95\% HDI{[}-0.20, 0.13{]}).
+Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% CI {[}-0.05, 0.34{]}) has a 92.35\% probability of being positive (\textgreater{} 0), 81.80\% of being significant (\textgreater{} 0.05). However, the difference did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-0.13, 0.22{]}) has a 67.20\% probability of being positive (\textgreater{} 0), 44.80\% of being significant (\textgreater{} 0.05). Neither for the ``bad'' person condition: \(mean_{diff}\) = 0.10, 95\% HDI {[}-0.16, 0.37{]}) has a 77.03\% probability of being positive (\textgreater{} 0), 64.62\% of being significant (\textgreater{} 0.05).
 
 \begin{figure}
 \centering
@@ -441,7 +441,7 @@ Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``o
 \caption{\label{fig:plot-exp4-all}Experiment 4: Implicit binding between good character and the self.}
 \end{figure}
 
-The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55, 95\% HDI {[}-75, -35{]}), and this effect was larger than when the shapes were associated neutral (\(mean_{diff}\) = 11, 95\% HDI {[}1, 21{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person, See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55.10, 95\% CI {[}-75.27, -35.11{]}) has a 100\% probability of being negative (\textless{} 0), 100.00\% of being significant (\textless{} -0.05). However, when the shapes were associated neutral character, having a ``self'' inside shapes increased the RTs: \(mean_{diff}\) = 10.88, 95\% CI {[}0.67, 20.84{]}) has a 98.20\% probability of being positive (\textgreater{} 0), 98.15\% of being significant (\textgreater{} 0.05). While having ``self'' slightly increased the RT than having ``other'' inside the shapes for the bad character: \(mean_{diff}\) = 5.39, 95\% CI {[}-16.59, 27.37{]}) has a 69.45\% probability of being positive (\textgreater{} 0), 69.27\% of being significant (\textgreater{} 0.05), See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
