--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1397,17 +1397,6 @@ hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentityOther:Valen
 hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentityOther:ValenceNeutral:ismatch")  # 1
 hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceBad:ismatch > IdentityOther:ValenceBad:ismatch")          # 1
 
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceNeutral")  # .73
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceBad")  # .9
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentitySelf:ValenceBad")  # .49
-# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceNeutral")  # .68
-# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceBad")  # .92
-# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceNeutral> IdentityOther:ValenceBad")  # .8
-# 
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentityOther:ValenceGood")  # .92
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentityOther:ValenceNeutral")  # .76
-# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceBad > IdentityOther:ValenceBad")  # .96
-
 # extract the population level parameters
 # criteria
 
@@ -1543,9 +1532,7 @@ df_exp4a_sdt_m1_plot_diff_wide <- df_exp4a_sdt_m1_plot %>%
                 ) %>%
   dplyr::select(`.chain`, `.iteration`, `.draw`,
                diff_GN_dprm_S:diff_diff_BN_SO) 
-
-bayestestR::sexit(df_exp4a_sdt_m1_plot_diff_wide[, 4:15])
-
+## plot:
 df_exp4a_sdt_m1_plot_diff <- df_exp4a_sdt_m1_plot_diff_wide %>%
   tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN_SO, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
@@ -1558,17 +1545,19 @@ p_exp4a_dprime1_diff_val <- df_exp4a_sdt_m1_plot_diff %>%
         dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
                                            grepl("_O", term_diff) ~"Other"),
                       Identity = factor(Identity, levels = c("Self", "Other"))) %>%
-        dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        dplyr::filter(!str_detect(term_diff, '_GB_|_BN')) %>%
         dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
-        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "Good vs. Bad",
+        dplyr::mutate(term_diff = dplyr::case_when(#grepl("_GB", term_diff) ~ "Good vs. Bad",
                                                    grepl("_GN", term_diff) ~"Good vs. Neutral",
-                                                   grepl("_BN", term_diff) ~ "Bad vs. Neutral"),
-                      term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral"))) %>%
+                                                   #grepl("_BN", term_diff) ~ "Bad vs. Neutral",
+                                                   ),
+                      #term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral")),
+                      ) %>%
         # dplyr::filter(str_detect(term_diff, '_SO_')) %>%
         # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
         dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
         dplyr::rename(conditions = term_diff) %>%
-        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = after_stat(x > 0))) +
+        ggplot2::ggplot(aes(x = value, fill = after_stat(x > 0))) + # y = fct_rev(conditions)
         tidybayes::stat_halfeye() +
         geom_vline(xintercept = 0, linetype = "dashed") +
         scale_fill_manual(values = c('skyblue', 'gray80'),
@@ -1576,7 +1565,7 @@ p_exp4a_dprime1_diff_val <- df_exp4a_sdt_m1_plot_diff %>%
                     name = "Effect" , labels = c("Yes", "No")) + 
         # scale_fill_manual(values = c('gray80', 'skyblue')) +
         labs(x = expression(paste("Valence effect on ", italic("d"), " prime", sep = ' ')),
-             y = expression("Contrasts")) + 
+             y = expression("Good vs. Neutral")) + 
         facet_wrap( ~ Identity, nrow = 1)
 
 df_exp4a_dprime1_diff_val <- df_exp4a_sdt_m1_plot_diff %>%
@@ -1654,29 +1643,16 @@ df_exp4a_dprime1_diff_diff <- df_exp4a_sdt_m1_plot_diff %>%  # difference betwee
                                        ci_method = 'hdi',
                                        test = c("p_direction", "p_significance"),
                                        centrality = "median")
+
+test_res_sdt_4a <- bayestestR::sexit(df_exp4a_sdt_m1_plot_diff_wide[, c(4, 7, 13)])
+test_res_sdt_4a
 ```
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = `r rep_m_d_exp4a_good_s`, 95% HDI [`r rep_ll_d_exp4a_good_s` `r rep_ul_d_exp4a_good_s`]) than shapes that have neutral character (median = `r rep_m_d_exp4a_neut_s`, 95% HDI [`r rep_ll_d_exp4a_neut_s` `r rep_ul_d_exp4a_neut_s`]) or bad character (median = `r rep_m_d_exp4a_bad_s`, 95% HDI [`r rep_ll_d_exp4a_bad_s` `r rep_ul_d_exp4a_bad_s`]), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = `r rep_m_d_exp4a_good_o`, 95% HDI [`r rep_ll_d_exp4a_good_o` `r rep_ul_d_exp4a_good_o`]) than had neutral (median = `r rep_m_d_exp4a_neut_o`, 95% HDI [`r rep_ll_d_exp4a_neut_o` `r rep_ul_d_exp4a_neut_o`]) or bad character (median = `r rep_m_d_exp4a_bad_o`, 95% HDI [`r rep_ll_d_exp4a_bad_o` `r rep_ul_d_exp4a_bad_o`]) inside. See Figure \@ref(fig:plot-exp4-all).
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = `r rep_m_d_exp4a_good_s`, 95% HDI [`r rep_ll_d_exp4a_good_s` `r rep_ul_d_exp4a_good_s`]) than shapes that have neutral character (median = `r rep_m_d_exp4a_neut_s`, 95% HDI [`r rep_ll_d_exp4a_neut_s` `r rep_ul_d_exp4a_neut_s`]), the difference (median = 0.08, 95% HDI [-0.10, 0.27]) has a 81.60% probability of being positive (> 0), 64.33% of being significant (> 0.05). For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = `r rep_m_d_exp4a_good_o`, 95% HDI [`r rep_ll_d_exp4a_good_o` `r rep_ul_d_exp4a_good_o`]) than had neutral (median = `r rep_m_d_exp4a_neut_o`, 95% HDI [`r rep_ll_d_exp4a_neut_o` `r rep_ul_d_exp4a_neut_o`]), the difference (median = -0.09, 95% CI [-0.25, 0.05]) has a 89.03% probability of being negative (< 0), 71.38% of being significant (< -0.05). The difference between theses two effects (median = 0.18, 95% CI [-0.06, 0.43]) has a 92.88% probability of being positive (> 0), 85.08% of being significant (> 0.05). See Figure \@ref(fig:plot-exp4-all).
 
 ```{r 4a_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4a'
 exp4a_rt_m1 <- fun_rt_val_id(exp_name)
-
-# summary(exp4a_rt_m1)  # n
-# 
-# bayestestR::describe_posterior(
-#   exp4a_rt_m1,
-#   effects = "fixed",
-#   component = "all",
-#   test = c("p_direction", "p_significance"),
-#   centrality = "all"
-# )
-
-#pp_check(exp4a_rt_m1)
-# rg <- emmeans::ref_grid(exp4a_rt_m1)
-# em <- emmeans::emmeans(rg, 'ismatch')
-# summary(em, point.est = median)
-# emmeans::joint_tests(exp4a_rt_m1)
 
 df_exp4a_m1_plot_rt <- exp4a_rt_m1 %>%
         tidybayes::gather_draws(`b_.*`, regex = TRUE)  %>%
@@ -1809,7 +1785,7 @@ rep_ul_exp4a_rt_bad_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Ot
         round(., digits = 0)
 
 
-df_exp4a_m1_plot_rt_diff <- df_exp4a_m1_plot_rt %>%
+df_exp4a_m1_plot_rt_diff_wide <- df_exp4a_m1_plot_rt %>%
         # tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
         dplyr::ungroup() %>%
         dplyr::select(term, `.chain`, `.iteration`, `.draw`, `value`) %>%
@@ -1829,7 +1805,9 @@ df_exp4a_m1_plot_rt_diff <- df_exp4a_m1_plot_rt %>%
                 diff_diff_BN_SO = diff_BN_S_RT_M - diff_BN_O_RT_M
                 ) %>%
   dplyr::select(`.chain`, `.iteration`, `.draw`,
-               diff_GN_S_RT_M:diff_diff_BN_SO) %>%
+               diff_GN_S_RT_M:diff_diff_BN_SO) 
+
+df_exp4a_m1_plot_rt_diff<- df_exp4a_m1_plot_rt_diff_wide %>%
   tidyr::pivot_longer(cols = diff_GN_S_RT_M:diff_diff_BN_SO, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_S_RT_M', 'diff_BN_S_RT_M', 'diff_GB_S_RT_M', 
                                                          'diff_GN_O_RT_M', 'diff_BN_O_RT_M', 'diff_GB_O_RT_M', 
@@ -1840,18 +1818,20 @@ p_exp4a_rt_diff_val <- df_exp4a_m1_plot_rt_diff %>%
         dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
                                                   grepl("_O", term_diff) ~"Other"),
                       Identity = factor(Identity, levels = c("Self", "Other"))) %>%
-        dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        dplyr::filter(!str_detect(term_diff, '_GB_|_BN')) %>%
         dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
-        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "Good vs. Bad",
+        dplyr::mutate(term_diff = dplyr::case_when(#grepl("_GB", term_diff) ~ "Good vs. Bad",
                                                    grepl("_GN", term_diff) ~"Good vs. Neutral",
-                                                   grepl("_BN", term_diff) ~ "Bad vs. Neutral"),
-                      term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral"))) %>%
+                                                   #grepl("_BN", term_diff) ~ "Bad vs. Neutral",
+                                                   ),
+                      #term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral")),
+                      ) %>%
         # dplyr::filter(str_detect(term_diff, '_SO_')) %>%
         #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
         # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
         # dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
         dplyr::rename(conditions = term_diff) %>%
-        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = after_stat(x < 0))) +
+        ggplot2::ggplot(aes(x = value, fill = after_stat(x < 0))) + # y = fct_rev(conditions), 
         tidybayes::stat_halfeye() +
         geom_vline(xintercept = 0, linetype = "dashed") +
         scale_fill_manual(values = c('skyblue', 'gray80'),
@@ -1859,7 +1839,7 @@ p_exp4a_rt_diff_val <- df_exp4a_m1_plot_rt_diff %>%
                     name = "Effect" , labels = c("Yes", "No")) + 
         # scale_fill_manual(values = c('gray80', 'skyblue')) +
         labs(x = expression("Valence effect on RTs "),
-             y = expression("Contrasts")) + 
+             y = expression("Good vs. Neutral")) + 
         facet_wrap( ~ Identity, nrow = 1)
 
 p_exp4a_rt_diff_id <- df_exp4a_m1_plot_rt_diff %>%
@@ -1901,6 +1881,10 @@ p_exp4a_rt1_diff_diff <- df_exp4a_m1_plot_rt_diff %>%
         # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
         labs(x = expression("Interaction effect on RT"),
              y = expression("Difference (Self vs. Other) of difference (Valence)"))
+
+test_res_rt_4a <- bayestestR::sexit(df_exp4a_m1_plot_rt_diff_wide[, c(4, 7, 13)])
+test_res_rt_4a
+
 ```
 
 ```{r plot-exp4a-BGLM, fig.cap="exp4a: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=12, warning=FALSE}
@@ -1913,20 +1897,12 @@ p2 <- (p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val) + plot_layout(nrow = 1, b
         # p3 +  plot_layout(nrow = 3) 
 ```
 
-A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) or bad character (median = `r rep_m_exp4a_rt_bad_s`, 95% HDI [`r rep_ll_exp4a_rt_bad_s` `r rep_ul_exp4a_rt_bad_s`]) were inside. This effect was reversed for the “other” condition: RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) or bad character (median =  `r rep_m_exp4a_rt_bad_o`, 95% HDI [`r rep_ll_exp4a_rt_bad_o` `r rep_ul_exp4a_rt_bad_o`]) inside.
+A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) were inside, the effect (median = -7.87, 95% CI [-17.49, 2.00]) has a 94.55% probability of being negative (< 0), 94.50% of being significant (< -0.05), and 93.97% of being large (< -0.30). In contrast, RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) inside, the effect (median = 11.64, 95% CI [-3.99, 27.83]) has a 93.00% probability of being positive (> 0), 92.83% of being significant (> 0.05), and 92.40% of being large (> 0.30). The difference between the effects (median = -19.46, 95% CI [-42.93, 3.72]) has a 94.90% probability of being negative (< 0), 94.88% of being significant (< -0.05), and 94.58% of being large (< -0.30).
 
 In experiment 4b, where moral characters were task-relevant and “self” vs “other” were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both *d'* and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 ```{r 4b_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
 exp4b_sdt_m1 <- fun_sdt_val_id(exp_name)
-
-# d-prime
-# hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceNeutral:ismatch")     # .98
-# hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceBad:ismatch")         # 1
-# hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentitySelf:ValenceBad:ismatch")      # .86
-# hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceNeutral:ismatch")   # .91
-# hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceBad:ismatch")       # .91
-# hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceNeutral:ismatch > IdentityOther:ValenceBad:ismatch")    # .65
 
 hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentityOther:ValenceGood:ismatch")        # .92
 hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentityOther:ValenceNeutral:ismatch")  # .67
@@ -1981,7 +1957,7 @@ df_exp4b_sdt_hdi <- df_exp4b_sdt_m1_plot %>%
         tidyr::unite("Indicies", Parameter:Index) %>%
         dplyr::mutate(Values = round(Values, digits = 3))
 
-df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot %>%
+df_exp4b_sdt_m1_plot_diff_wide <- df_exp4b_sdt_m1_plot %>%
         tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
         dplyr::ungroup() %>%
         dplyr::select(term, `.chain`, `.iteration`, `.draw`, `.value`) %>%
@@ -1995,12 +1971,17 @@ df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot %>%
                 diff_GB_dprm_O = dprime_Other_Good - dprime_Other_Bad,
                 diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
                 diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
-                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad,
+                #diff_diff_SO_GN = diff_SO_dprm_G - diff_SO_dprm_N
                 ) %>%
   dplyr::select(`.chain`, `.iteration`, `.draw`,
                diff_GN_dprm_S, diff_BN_dprm_S, diff_GB_dprm_S,
                diff_GN_dprm_O, diff_BN_dprm_O, diff_GB_dprm_O, 
-               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
+               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B,
+               # diff_diff_SO_GN
+               )
+
+df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot_diff_wide %>%
   tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
                                                          'diff_GB_dprm_O', 'diff_GN_dprm_O', 'diff_BN_dprm_O', 
@@ -2041,7 +2022,8 @@ p_exp4b_dprime1_diff_val <- df_exp4b_sdt_m1_plot_diff %>%
 
 p_exp4b_dprime1_diff_id <- df_exp4b_sdt_m1_plot_diff %>%
         dplyr::filter(str_detect(term_diff, '_SO_')) %>%
-        dplyr::mutate(term_diff = dplyr::case_when(grepl("_B", term_diff) ~ "Bad",
+        dplyr::filter(!str_detect(term_diff, '_B')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(# grepl("_B", term_diff) ~ "Bad",
                                                    grepl("_N", term_diff) ~"Neutral",
                                                    grepl("_G", term_diff) ~ "Good"),
                       term_diff = factor(term_diff, levels = c("Good", "Neutral", "Bad"))) %>%
@@ -2059,9 +2041,12 @@ p_exp4b_dprime1_diff_id <- df_exp4b_sdt_m1_plot_diff %>%
         labs(x = expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')),
              y = expression("Contrasts (Self vs. Other)"))+ 
         facet_wrap( ~ conditions, nrow = 1)
+
+test_res_sdt_4b <- bayestestR::sexit(df_exp4b_sdt_m1_plot_diff_wide[, c(10, 11, 12)])
+test_res_sdt_4b
 ```
 
-Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[19]`, 95% HDI [`r df_exp4b_sdt_m1_diff_hdi$Values[20]` `r df_exp4b_sdt_m1_diff_hdi$Values[21]`]), but this effect did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[22]`, 95% HDI [`r df_exp4b_sdt_m1_diff_hdi$Values[23]`, `r df_exp4b_sdt_m1_diff_hdi$Values[24]`]) or "bad" person ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[25]`, 95% HDI[`r df_exp4b_sdt_m1_diff_hdi$Values[26]`, `r df_exp4b_sdt_m1_diff_hdi$Values[27]`]). 
+Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = 0.14, 95% CI [-0.05, 0.34]) has a 92.35% probability of being positive (> 0), 81.80% of being significant (> 0.05). However, the difference did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = 0.04, 95% HDI [-0.13, 0.22]) has a 67.20% probability of being positive (> 0), 44.80% of being significant (> 0.05). Neither for the "bad" person condition: $mean_{diff}$  = 0.10, 95% HDI [-0.16, 0.37]) has a 77.03% probability of being positive (> 0), 64.62% of being significant (> 0.05). 
 
 ```{r 4b_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
@@ -2109,7 +2094,7 @@ p_exp4b_rt1 <- df_exp4b_m1_plot_rt %>%
         #scale_fill_brewer(palette = "Dark2") +
         theme_classic()
 
-df_exp4b_m1_plot_rt_diff <- df_exp4b_m1_plot_rt %>%
+df_exp4b_m1_plot_rt_diff_wide <- df_exp4b_m1_plot_rt %>%
         # tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
         dplyr::ungroup() %>%
         dplyr::select(term, `.chain`, `.iteration`, `.draw`, `value`) %>%
@@ -2125,8 +2110,10 @@ df_exp4b_m1_plot_rt_diff <- df_exp4b_m1_plot_rt %>%
                 diff_SO_N_RT_M = M_Self_Neutral - M_Other_Neutral,
                 diff_SO_B_RT_M = M_Self_Bad - M_Other_Bad
                 ) %>%
-  dplyr::select(`.chain`, `.iteration`, `.draw`,
-               diff_GN_S_RT_M:diff_SO_B_RT_M) %>%
+        dplyr::select(`.chain`, `.iteration`, `.draw`,
+                       diff_GN_S_RT_M:diff_SO_B_RT_M) 
+
+df_exp4b_m1_plot_rt_diff <- df_exp4b_m1_plot_rt_diff_wide %>%
   tidyr::pivot_longer(cols = diff_GN_S_RT_M:diff_SO_B_RT_M, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_S_RT_M', 'diff_BN_S_RT_M', 'diff_GB_S_RT_M', 
                                                          'diff_GN_O_RT_M', 'diff_BN_O_RT_M', 'diff_GB_O_RT_M', 
@@ -2188,10 +2175,11 @@ p_exp4b_rt_diff_val <- df_exp4b_m1_plot_rt_diff %>%
 
 p_exp4b_rt_diff_id <- df_exp4b_m1_plot_rt_diff %>%
         dplyr::filter(str_detect(term_diff, '_SO_')) %>%
-        dplyr::mutate(term_diff = dplyr::case_when(grepl("_B", term_diff) ~ "Bad",
+        dplyr::filter(!str_detect(term_diff, '_B')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(# grepl("_B", term_diff) ~ "Bad",
                                                    grepl("_N", term_diff) ~"Neutral",
                                                    grepl("_G", term_diff) ~ "Good"),
-                      term_diff = factor(term_diff, levels = c("Good", "Neutral", "Bad"))) %>%
+                      term_diff = factor(term_diff, levels = c("Good", "Neutral"))) %>%
         # dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
         # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
         # dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
@@ -2207,6 +2195,8 @@ p_exp4b_rt_diff_id <- df_exp4b_m1_plot_rt_diff %>%
              y = expression("Contrasts (Self vs. Other)"))+ 
         facet_wrap( ~ conditions, nrow = 1)
 
+test_res_rt_4b <- bayestestR::sexit(df_exp4b_m1_plot_rt_diff_wide[, c(10, 11, 12)])
+test_res_rt_4b
 ```
 
 ```{r plot-exp4b-BGLM, fig.cap="exp4a: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=12, warning=FALSE}
@@ -2235,7 +2225,7 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 
 ```
 
-The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[19]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[20]`, `r df_exp4b_m1_rt_diff_hdi$Values[21]`]), and this effect was larger than when the shapes were associated neutral ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[22]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[23]`, `r df_exp4b_m1_rt_diff_hdi$Values[24]`]) or bad ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[25]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[26]`, `r df_exp4b_m1_rt_diff_hdi$Values[27]`]) person, See Figure \@ref(fig:plot-exp4-all).
+The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55.10, 95% CI [-75.27, -35.11]) has a 100% probability of being negative (< 0), 100.00% of being significant (< -0.05). However, when the shapes were associated neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 10.88, 95% CI [0.67, 20.84]) has a 98.20% probability of being positive (> 0), 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5.39, 95% CI [-16.59, 27.37]) has a 69.45% probability of being positive (> 0), 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
 
